--- a/packages/metaparams/public/index.html
+++ b/packages/metaparams/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href='<%= process.env.NODE_ENV !== "production" ? "/favicon.ico" : "/css/favicon.ico" %>' />
     <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Hind:400,600|Roboto:300,400,600,700' rel='stylesheet'>
-    <link href='<%= process.env.NODE_ENV !== "production" ? "/all.css" : "/css/all.css" %>' rel='stylesheet'>
+    <link href="/css/all.css" rel='stylesheet'>
     <title>Metaparams</title>
   </head>
   <body>
